Improve Docker build setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: runner  # Use 'runner-system' to leverage system node packages
     container_name: nextjs-app
     ports:
       - "4020:3000"
