--- a/Dockerfile.bun
+++ b/Dockerfile.bun
@@ -2,7 +2,7 @@
 FROM oven/bun:latest AS builder
 WORKDIR /app
 
-COPY package.json bunfig.toml package-lock.json pnpm-lock.yaml ./
+COPY package.json .
 RUN bun install --frozen-lockfile
 
 COPY . .
@@ -17,9 +17,6 @@ COPY --from=builder /app/public ./public
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package.json ./
-COPY --from=builder /app/bunfig.toml ./
-COPY --from=builder /app/package-lock.json ./
-COPY --from=builder /app/pnpm-lock.yaml ./
 
 EXPOSE 3000
 CMD ["bun", "run", "start:bun"]
