--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "dev:bun": "bun run next dev",
-    "build:bun": "bun run next build",
-    "start:bun": "bun run next start"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
