--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:offline": "NEXT_PUBLIC_OFFLINE_MODE=true next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
