--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "react-hook-form": "^7.51.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
